k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flags
  labels:
    app.kubernetes.io/name: feature-flags
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: feature-flags
  ports:
    - name: http
      port: 80
      targetPort: http
